--- a/Apple tree.html
+++ b/Apple tree.html
@@ -25,103 +25,149 @@
 
   <!-- ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ -->
 
-<body ID="frame_test" style="background-image:url(images/apple-tree2.jpg); height:2000px;">
+<body ID="frame_test" style="background-image:url(images/Apple-tree2.jpg); height:2000px;">
   <div ID="info">
       <div class="righthandline">
 
-<!-- CARE INFO 💌 -->
+        <!-- CARE INFO 💌 -->
 
-        <button class="icons" onclick="care()"><p> Care<p> </button>
-        <div id="careinfo" class="infoblock" style="display:none">
+                <button class="icons" onclick="showhide('careinfo')"><p> Care<p> </button>
+                <div id="careinfo" class="infoblock" style="display:none">
 
-<img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
+        <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-<h2> Care & Maitnence </h2>
+        <h2> Care & Maitnence </h2>
 
-<p class="textblock"> info on the care and maintnece of weld. </p>
-
-
-        </div>
-
-<!-- End of care info -->
-
+        <p class="textblock">
+February, March, April, May:
 <br>
-
-<!-- HARVEST INFO 💌 -->
-
-        <button class="icons" onclick="harvest()"><p> Harvest<p> </button>
-
-        <div id="harvestinfo" class="infoblock" style="display:none">
-          <img src="images/harvest.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
-
-          <h2> Harvest </h2>
-
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
-
-<!-- End of harvest info  -->
+Prune, mulch, weed, and fertilize with compost tea.
 <br>
-<!-- USES INFO 💌 -->
-
-      <button class="icons" onclick="uses()"><p> Uses<p> </button>
-
-        <div id="usesinfo"  class="infoblock" style="display:none">
-          <img src="images/uses.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
-
-          <h2> Uses </h2>
-
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
-<!-- End of uses info -->
+<i> I think we all could use some tea after so many rainy days. </i>
+<br><br>
+June, July:
 <br>
-<!-- IDENTIFICATION DESCRIPTION 💌 -->
-
-        <button class="icons" onclick="idinfo()"><p> ID<p> </button>
-
-        <div id="idinfo" class="infoblock" style="display:none">
-          <img src="images/id.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
-
-          <h2> Plant Identification </h2>
-
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
-<!-- End of Plant identification -->
+Weed.
+<br> <br>
+August, September, October:
 <br>
-<!-- ORGINS 💌 -->
-
-        <button class="icons" onclick="orgins()"><p> Orgins<p> </button>
-        <div id="orginsinfo" class="infoblock" style="display:none">
-          <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
-
-          <h2> Orgins </h2>
-
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
-<!-- End of orgins -->
+Trim water shoots, weed some more, prune and serve compost tea.
+<br> <br>
+November, December, January:
 <br>
-<!-- STORIES 💌 -->
+Snip, snip, snip (Prune).
+<br> <br>
 
-        <button class="icons" onclick="stories()"><p> Stories<p> </button>
+<i> Repeat. </i>
+ </p>
 
-        <div id="storiesinfo" class="infoblock" style="display:none">
-          <img src="images/stories.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-          <h2> Stories </h2>
+                </div>
 
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
-      </div>
-<!-- End of stories -->
+        <!-- End of care info -->
 
-    <p class="facts"> Plant_Information </P>
-      <div class= "column_layout" class="infoblock">
+        <br>
 
-<!-- PLANT NAME AND LATIN -->
-          <h1> Apple Tree </h1>
-      </div>
+        <!-- HARVEST INFO 💌 -->
 
-<!-- EXIT PAGE BUTTONS -->
-          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> ~Keep Walking~</a></button>
-          <button class="gohome"> <a href="index.html">~Back to Map~</a></button>
+                <button class="icons" onclick="showhide('harvestinfo')"><p> Harvest<p> </button>
 
-    </div>
+                <div id="harvestinfo" class="infoblock" style="display:none">
+                  <img src="images/harvest.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
+                  <h2> Harvest </h2>
+
+                  <p class="textblock">
+February, March, April:
+<br>
+Greenwood can be harvested-as needed- for spoons, buttons, and other small projects.
+<br> <br>
+August, September:
+<br>
+High tannins in the leaves and bark make an excellent choice for a natural dye.
 <br>
 <br>
+And, of course, fall is apple picking.
+ </p>        </div>
 
-</body>
+        <!-- End of harvest info  -->
+        <br>
+        <!-- USES INFO 💌 -->
+
+              <button class="icons" onclick="showhide('usesinfo')"><p> Uses<p> </button>
+
+                <div id="usesinfo"  class="infoblock" style="display:none">
+                  <img src="images/uses.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
+
+                  <h2> Uses </h2>
+
+                  <p class="textblock">
+Apple wood is a great hardwood to carve.
+<br>
+<br>
+The branches and leaves in late summer and early fall yield tannin-rich natural dyes.
+<br>
+<br>
+Both apple wood and apple dye react very well with iron as a colour depressant.
+ </p>        </div>
+        <!-- End of uses info -->
+        <br>
+        <!-- IDENTIFICATION DESCRIPTION 💌 -->
+
+                <button class="icons" onclick="showhide('idinfo')"><p> ID<p> </button>
+
+                <div id="idinfo" class="infoblock" style="display:none">
+                  <img src="images/id.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
+
+                  <h2> Plant Identification </h2>
+
+                  <p class="textblock">
+
+<a href="http://www.canadiantreetours.org/species-pages/Common_apple.html" style="text-decoration: underline;"> Hyperlink to identifiers of the branches, buds, bark and twigs. </a>
+
+
+                   </p>        </div>
+        <!-- End of Plant identification -->
+        <br>
+        <!-- ORGINS 💌 -->
+
+                <button class="icons" onclick="showhide('orginsinfo')"><p> Orgins<p> </button>
+                <div id="orginsinfo" class="infoblock" style="display:none">
+                  <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
+
+                  <h2> Orgins </h2>
+
+                  <p class="textblock">    Growing all over the world. </p> </div>
+        <!-- End of orgins -->
+        <br>
+        <!-- STORIES 💌 -->
+
+                <button class="icons" onclick="showhide('storiesinfo')"><p> Stories<p> </button>
+
+
+                <div id="storiesinfo" class="infoblock" style="display:none">
+                  <img src="images/stories.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
+
+                  <h2> Stories </h2>
+
+                  <p class="textblock"> Share your stories of Apple trees with earthandmapping(at)gmail.com </p>        </div>
+              </div>
+        <!-- End of stories -->
+
+            <p class="facts"> Plant_Information </P>
+              <div class= "column_layout" class="infoblock">
+
+        <!-- PLANT NAME AND LATIN -->
+                  <h1> Apple Tree </h1>
+              </div>
+
+        <!-- EXIT PAGE BUTTONS -->
+                  <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> ~Keep Walking~</a></button>
+                  <button class="gohome"> <a href="index.html">~Back to Map~</a></button>
+
+            </div>
+
+        <br>
+        <br>
+
+        </body>
