--- a/Blackberry (himalayan and thornless).html
+++ b/Blackberry (himalayan and thornless).html
@@ -29,99 +29,104 @@
   <div ID="info">
       <div class="righthandline">
 
-<!-- CARE INFO 💌 -->
+        <!-- CARE INFO 💌 -->
 
-        <button class="icons" onclick="care()"><p> Care<p> </button>
-        <div id="careinfo" class="infoblock" style="display:none">
+                <button class="icons" onclick="showhide('careinfo')"><p> Care<p> </button>
+                <div id="careinfo" class="infoblock" style="display:none">
 
-<img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
+        <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-<h2> Care & Maitnence </h2>
+        <h2> Care & Maitnence </h2>
 
-<p class="textblock"> info on the care and maintnece of weld. </p>
+        <p class="textblock"> Himalayan blackberry is an invasive species at MOP. If left to its own devices, it will grow everywhere! Proper pruning and maintenance to set healthy boundaries are needed. </p>
 
 
-        </div>
+                </div>
 
-<!-- End of care info -->
+        <!-- End of care info -->
 
-<br>
+        <br>
 
-<!-- HARVEST INFO 💌 -->
+        <!-- HARVEST INFO 💌 -->
 
-        <button class="icons" onclick="harvest()"><p> Harvest<p> </button>
+                <button class="icons" onclick="showhide('harvestinfo')"><p> Harvest<p> </button>
 
-        <div id="harvestinfo" class="infoblock" style="display:none">
-          <img src="images/harvest.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
+                <div id="harvestinfo" class="infoblock" style="display:none">
+                  <img src="images/harvest.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-          <h2> Harvest </h2>
+                  <h2> Harvest </h2>
 
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
+                  <p class="textblock"> Himalayan blackberry stalks may be harvested for fibre.
+                  <br>
+                  Thornless blackberry stalks do not provide fibre as the Himalayan does.<i>Different strokes. </i>
+                  <br>
+                  However, species provide delicious berries in the late summer. </p>        </div>
 
-<!-- End of harvest info  -->
-<br>
-<!-- USES INFO 💌 -->
+        <!-- End of harvest info  -->
+        <br>
+        <!-- USES INFO 💌 -->
 
-      <button class="icons" onclick="uses()"><p> Uses<p> </button>
+              <button class="icons" onclick="showhide('usesinfo')"><p> Uses<p> </button>
 
-        <div id="usesinfo"  class="infoblock" style="display:none">
-          <img src="images/uses.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
+                <div id="usesinfo"  class="infoblock" style="display:none">
+                  <img src="images/uses.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-          <h2> Uses </h2>
+                  <h2> Uses </h2>
 
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
-<!-- End of uses info -->
-<br>
-<!-- IDENTIFICATION DESCRIPTION 💌 -->
+                  <p class="textblock"> Stalks from himalayan blackberry bush can be used for corage/basketry fibre. </p>        </div>
+        <!-- End of uses info -->
+        <br>
+        <!-- IDENTIFICATION DESCRIPTION 💌 -->
 
-        <button class="icons" onclick="idinfo()"><p> ID<p> </button>
+                <button class="icons" onclick="showhide('idinfo')"><p> ID<p> </button>
 
-        <div id="idinfo" class="infoblock" style="display:none">
-          <img src="images/id.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
+                <div id="idinfo" class="infoblock" style="display:none">
+                  <img src="images/id.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-          <h2> Plant Identification </h2>
+                  <h2> Plant Identification </h2>
 
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
-<!-- End of Plant identification -->
-<br>
-<!-- ORGINS 💌 -->
+                  <p class="textblock"> <a href="https://gobotany.nativeplanttrust.org/dkey/rubus/" style="text-decoration: underline;"> Hyperlink to a dichotomous key of Blackberry species. </a>  </p>        </div>
+        <!-- End of Plant identification -->
+        <br>
+        <!-- ORGINS 💌 -->
 
-        <button class="icons" onclick="orgins()"><p> Orgins<p> </button>
-        <div id="orginsinfo" class="infoblock" style="display:none">
-          <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
+                <button class="icons" onclick="showhide('orginsinfo')"><p> Orgins<p> </button>
+                <div id="orginsinfo" class="infoblock" style="display:none">
+                  <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-          <h2> Orgins </h2>
+                  <h2> Orgins </h2>
 
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
-<!-- End of orgins -->
-<br>
-<!-- STORIES 💌 -->
+                  <p class="textblock"> Rubus armeniacus is native to Armenia but has over time naturalized around the world. The species is invasive to Vancouver.
+                  <br> Rubus ulmifolius is native to western Europe. </p>        </div>
+        <!-- End of orgins -->
+        <br>
+        <!-- STORIES 💌 -->
 
-        <button class="icons" onclick="stories()"><p> Stories<p> </button>
+        <button class="icons" onclick="showhide('storiesinfo')"><p> Stories<p> </button>
 
-        <div id="storiesinfo" class="infoblock" style="display:none">
-          <img src="images/stories.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
+                <div id="storiesinfo" class="infoblock" style="display:none">
+                  <img src="images/stories.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-          <h2> Stories </h2>
+                  <h2> Stories </h2>
 
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
-      </div>
-<!-- End of stories -->
+                  <p class="textblock"> Share your stories of Blackberry (thornless and himalayan) with earthandmapping(at)gmail.com </p>        </div>
+              </div>
+        <!-- End of stories -->
 
-    <p class="facts"> Plant_Information </P>
-      <div class= "column_layout" class="infoblock">
+            <p class="facts"> Plant_Information </P>
+              <div class= "column_layout" class="infoblock">
 
-<!-- PLANT NAME AND LATIN -->
-          <h1> Blackberry (Himalayan-and-thornless) </h1>
-      </div>
+        <!-- PLANT NAME AND LATIN -->
+                  <h1> Himalayan blackberry (Rubus armeniacus) and thornless blackberry (Rubus ulmifolius) </h1>
+              </div>
 
-<!-- EXIT PAGE BUTTONS -->
-          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> ~Keep Walking~</a></button>
-          <button class="gohome"> <a href="index.html">~Back to Map~</a></button>
+        <!-- EXIT PAGE BUTTONS -->
+                  <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> ~Keep Walking~</a></button>
+                  <button class="gohome"> <a href="index.html">~Back to Map~</a></button>
 
-    </div>
+            </div>
 
-<br>
-<br>
+        <br>
+        <br>
 
-</body>
+        </body>
