--- a/Lupine.html
+++ b/Lupine.html
@@ -25,7 +25,7 @@
 
   <!-- ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ -->
 
-<body ID="frame_test" style="background-image:url(images/lupine2.jpg); height:2000px;">
+<body ID="frame_test" style="background-image:url(images/Lupine2.jpg); height:2000px;">
   <div ID="info">
       <div class="righthandline">
 
@@ -38,7 +38,7 @@
 
 <h2> Care & Maitnence </h2>
 
-<p class="textblock"> info on the care and maintnece of weld. </p>
+<p class="textblock"> Leave old flowering stalks as pollinator homes through the winter </p>
 
 
         </div>
@@ -56,7 +56,9 @@
 
           <h2> Harvest </h2>
 
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
+          <p class="textblock">
+            March, April: <br>
+            Harvest leaves before flowering occurs for best colour </p>        </div>
 
 <!-- End of harvest info  -->
 <br>
@@ -69,7 +71,10 @@
 
           <h2> Uses </h2>
 
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
+          <p class="textblock">
+             ~ Pollinator friendly ~ early spring bee forage.
+            <br>
+             Leaves and flowers harvested for botnaical printing</p>        </div>
 <!-- End of uses info -->
 <br>
 <!-- IDENTIFICATION DESCRIPTION 💌 -->
@@ -81,7 +86,7 @@
 
           <h2> Plant Identification </h2>
 
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
+          <p class="textblock"> <a href="http://linnet.geog.ubc.ca/Atlas/Atlas.aspx?sciname=Lupinus%20polyphyllus" style="text-decoration: underline;"> Hyperlink to information on identifying lupines.</a></p>        </div>
 <!-- End of Plant identification -->
 <br>
 <!-- ORGINS 💌 -->
@@ -104,7 +109,7 @@
 
           <h2> Stories </h2>
 
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
+          <p class="textblock"> Western North America </p>        </div>
       </div>
 <!-- End of stories -->
 
@@ -112,7 +117,7 @@
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> Lupine </h1>
+          <h1> Lupine (Lupinus polyphyllus)</h1>
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
