--- a/Madder root.html
+++ b/Madder root.html
@@ -31,14 +31,23 @@
 
 <!-- CARE INFO 💌 -->
 
-        <button class="icons" onclick="care()"><p> Care<p> </button>
+        <button class="icons" onclick="showhide('careinfo')"><p> Care<p> </button>
         <div id="careinfo" class="infoblock" style="display:none">
 
 <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
 <h2> Care & Maitnence </h2>
 
-<p class="textblock"> info on the care and maintnece of weld. </p>
+<p class="textblock">
+  Rotate area of harvest every 3-4 years.
+  <br><br>
+  March, April, May, June:
+  <br><br>
+  Trellis, <br>
+  add lime to soil,  <br>
+  lay down new spring growth before 18 inchs high. <br>
+  Cover in soil to promote new roots.
+ </p>
 
 
         </div>
@@ -49,62 +58,70 @@
 
 <!-- HARVEST INFO 💌 -->
 
-        <button class="icons" onclick="harvest()"><p> Harvest<p> </button>
+        <button class="icons" onclick="showhide('harvestinfo')"><p> Harvest<p> </button>
 
         <div id="harvestinfo" class="infoblock" style="display:none">
           <img src="images/harvest.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
           <h2> Harvest </h2>
 
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
+          <p class="textblock">
+          October, November:<br>
+          Harvest roots for dyeing. </p>        </div>
 
 <!-- End of harvest info  -->
 <br>
 <!-- USES INFO 💌 -->
 
-      <button class="icons" onclick="uses()"><p> Uses<p> </button>
+      <button class="icons" onclick="showhide('usesinfo')"><p> Uses<p> </button>
 
         <div id="usesinfo"  class="infoblock" style="display:none">
           <img src="images/uses.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
           <h2> Uses </h2>
 
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
+          <p class="textblock">
+          Madder: a four colour, one pot dye <br>
+          As followed: <br>
+          yellow, Red, pink, brown. <br>
+          n/a, alum, exhast, soda-ash. <br>
+
+          </p>        </div>
 <!-- End of uses info -->
 <br>
 <!-- IDENTIFICATION DESCRIPTION 💌 -->
 
-        <button class="icons" onclick="idinfo()"><p> ID<p> </button>
+        <button class="icons" onclick="showhide('idinfo')"><p> ID<p> </button>
 
         <div id="idinfo" class="infoblock" style="display:none">
           <img src="images/id.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
           <h2> Plant Identification </h2>
 
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
+          <p class="textblock"> <a href="https://gobotany.nativeplanttrust.org/species/rubia/tinctoria/" style="text-decoration:underline;"> Hyperlink to information on identifying madder root. </a> <br> Tip! The stem feels like a cat's tounge. </p>        </div>
 <!-- End of Plant identification -->
 <br>
 <!-- ORGINS 💌 -->
 
-        <button class="icons" onclick="orgins()"><p> Orgins<p> </button>
+        <button class="icons" onclick="showhide('orginsinfo')"><p> Orgins<p> </button>
         <div id="orginsinfo" class="infoblock" style="display:none">
           <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
           <h2> Orgins </h2>
 
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
+          <p class="textblock"> Mediterranean, Europe. </p>        </div>
 <!-- End of orgins -->
 <br>
 <!-- STORIES 💌 -->
 
-        <button class="icons" onclick="stories()"><p> Stories<p> </button>
+        <button class="icons" onclick="showhide('storiesinfo')"><p> Stories<p> </button>
 
         <div id="storiesinfo" class="infoblock" style="display:none">
           <img src="images/stories.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
           <h2> Stories </h2>
 
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
+          <p class="textblock"> Share your stories of madder root with earthandmapping(at)gmail.com. </p>        </div>
       </div>
 <!-- End of stories -->
 
@@ -112,7 +129,7 @@
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> Madder Root </h1>
+          <h1> Madder root (Rubia tinctorum)</h1>
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
