--- a/Plum tree.html
+++ b/Plum tree.html
@@ -29,70 +29,91 @@
   <div ID="info">
       <div class="righthandline">
 
-<!-- CARE INFO 💌 -->
+        <!-- CARE INFO 💌 -->
 
-        <button class="icons" onclick="care()"><p> Care<p> </button>
-        <div id="careinfo" class="infoblock" style="display:none">
+                <button class="icons" onclick="showhide('careinfo')"><p> Care<p> </button>
+                <div id="careinfo" class="infoblock" style="display:none">
 
-<img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
+        <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-<h2> Care & Maitnence </h2>
+        <h2> Care & Maitnence </h2>
 
-<p class="textblock"> info on the care and maintnece of weld. </p>
+        <p class="textblock">
+        Febuary, March, April, August, September, October:
+        <br>
+        prune and mulch.
+        <br><br>
+        November, December, January:
+        <br>
+        need be tree removal
+        <br><br>
+        <i> Repeat </i>
+         </p>
 
 
-        </div>
+                </div>
 
-<!-- End of care info -->
-
+        <!-- End of care info -->
 <br>
 
 <!-- HARVEST INFO 💌 -->
 
-        <button class="icons" onclick="harvest()"><p> Harvest<p> </button>
+        <button class="icons" onclick="showhide('harvestinfo')"><p> Harvest<p> </button>
 
         <div id="harvestinfo" class="infoblock" style="display:none">
           <img src="images/harvest.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
           <h2> Harvest </h2>
 
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
+          <p class="textblock">  </p>
+February, March, April:
+<br>
+need be greenwood for carving
+<br><br>
+May, June, July:
+<br>
+cherries for the community
+<br><br>
+Augaust, September, October:
+<br>
+Need be leave and stalks for dyes and pigments.
+      </div>
 
 <!-- End of harvest info  -->
 <br>
 <!-- USES INFO 💌 -->
 
-      <button class="icons" onclick="uses()"><p> Uses<p> </button>
+      <button class="icons" onclick="showhide('usesinfo')"<p> Uses<p> </button>
 
         <div id="usesinfo"  class="infoblock" style="display:none">
           <img src="images/uses.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
           <h2> Uses </h2>
 
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
+          <p class="textblock"> Come fall, leaves and branches can be uses for dyes; Come Spring, the greenwood can be used for carving projects; And, come summer, the fruit can be harvested for food. </p>        </div>
 <!-- End of uses info -->
 <br>
 <!-- IDENTIFICATION DESCRIPTION 💌 -->
 
-        <button class="icons" onclick="idinfo()"><p> ID<p> </button>
+        <button class="icons" onclick="showhide('idinfo')"><p> ID<p> </button>
 
         <div id="idinfo" class="infoblock" style="display:none">
           <img src="images/id.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
           <h2> Plant Identification </h2>
 
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
+          <p class="textblock"> <a href="https://linnet.geog.ubc.ca/Atlas/Atlas.aspx?sciname=Prunus%20cerasifera&redblue=Both&lifeform=2" style="text-decoration: underline;"> Hyperlink to information on identifying a cherry plum tree. </a>  </p>        </div>
 <!-- End of Plant identification -->
 <br>
 <!-- ORGINS 💌 -->
 
-        <button class="icons" onclick="orgins()"><p> Orgins<p> </button>
+        <button class="icons" onclick="showhide('orginsinfo')"><p> Orgins<p> </button>
         <div id="orginsinfo" class="infoblock" style="display:none">
           <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
           <h2> Orgins </h2>
 
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
+          <p class="textblock"> Southeastern Europe and Western Asia. </p>        </div>
 <!-- End of orgins -->
 <br>
 <!-- STORIES 💌 -->
@@ -104,7 +125,7 @@
 
           <h2> Stories </h2>
 
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
+          <p class="textblock"> Share your stories about plum trees with earthandmapping(at)gmail.com</p>        </div>
       </div>
 <!-- End of stories -->
 
@@ -112,7 +133,7 @@
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> Plum Tree </h1>
+          <h1> Cherry plum Tree (Prunus cerasifera) </h1>
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
