--- a/Japanese indigo.html
+++ b/Japanese indigo.html
@@ -25,7 +25,7 @@
 
   <!-- ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ -->
 
-<body ID="frame_test" style="background-image:url(images/japanese_indigo2.jpg); height:2000px;">
+<body ID="frame_test" style="background-image:url(images/Japanese_indigo2.jpg); height:2000px;">
   <div ID="info">
       <div class="righthandline">
 
@@ -38,7 +38,17 @@
 
 <h2> Care & Maitnence </h2>
 
-<p class="textblock"> info on the care and maintnece of weld. </p>
+<p class="textblock">
+late March: <br>
+Begin seeds indoors
+<br><br>
+May: <br>
+Transplat to garden.<br>
+Fertilize with fish fertilizer or compost tea every 10 days;
+<br><br>
+Augaust, September:<br>
+ clip stems to promote bushiness ~~more leaf production
+ </p>
 
 
         </div>
@@ -56,7 +66,15 @@
 
           <h2> Harvest </h2>
 
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
+          <p class="textblock">
+          May, June, July, August:<br>
+          Fresh stalks and leaves for dyes.
+          <br><br>
+          September:<br>
+          Before seeds form, harvest entire plant <br>
+          at dawn for highest indigoten levels.
+
+          </p>        </div>
 
 <!-- End of harvest info  -->
 <br>
@@ -69,7 +87,7 @@
 
           <h2> Uses </h2>
 
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
+          <p class="textblock"> The leaves create depths of blue dye once reacting with air and oxidizing. </p>        </div>
 <!-- End of uses info -->
 <br>
 <!-- IDENTIFICATION DESCRIPTION 💌 -->
@@ -81,7 +99,7 @@
 
           <h2> Plant Identification </h2>
 
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
+          <p class="textblock">  </p>        </div>
 <!-- End of Plant identification -->
 <br>
 <!-- ORGINS 💌 -->
@@ -92,7 +110,7 @@
 
           <h2> Orgins </h2>
 
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
+          <p class="textblock"> Japan. </p>        </div>
 <!-- End of orgins -->
 <br>
 <!-- STORIES 💌 -->
@@ -104,7 +122,7 @@
 
           <h2> Stories </h2>
 
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
+          <p class="textblock"> Share your stories with japanese indigo with earthandmapping(at)gmail.com. </p>        </div>
       </div>
 <!-- End of stories -->
 
@@ -112,7 +130,7 @@
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> Japanese Indigo </h1>
+          <h1> Japanese Indigo (Persicaria tinctoria) </h1>
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
