--- a/Mustard green.html
+++ b/Mustard green.html
@@ -25,7 +25,7 @@
 
   <!-- ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ -->
 
-<body ID="frame_test" style="background-image:url(images/mustard-green2.jpg); height:1800px;">
+<body ID="frame_test" style="background-image:url(images/Mustard-green2.jpg); height:1800px;">
   <div ID="info">
       <div class="righthandline">
 
