--- a/Quince.html
+++ b/Quince.html
@@ -25,86 +25,98 @@
 
   <!-- ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ -->
 
-<body ID="frame_test" style="background-image:url(images/quince2.jpg); height:1800px;">
+<body ID="frame_test" style="background-image:url(images/Quince2.jpg); height:1800px;">
   <div ID="info">
       <div class="righthandline">
 
-<!-- CARE INFO 💌 -->
+        <!-- CARE INFO 💌 -->
 
-        <button class="icons" onclick="care()"><p> Care<p> </button>
-        <div id="careinfo" class="infoblock" style="display:none">
+                <button class="icons" onclick="showhide('careinfo')"><p> Care<p> </button>
+                <div id="careinfo" class="infoblock" style="display:none">
 
-<img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
+        <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-<h2> Care & Maitnence </h2>
+        <h2> Care & Maitnence </h2>
 
-<p class="textblock"> info on the care and maintnece of weld. </p>
+        <p class="textblock">
+        Febuary, March, April, August, September, October:
+        <br>
+        prune and mulch.
+        <br><br>
+        November, December, January:
+        <br>
+        need be tree removal
+        <br><br>
+        <i> Repeat </i>
+         </p>
 
 
-        </div>
+                </div>
 
-<!-- End of care info -->
+        <!-- End of care info -->
 
 <br>
 
 <!-- HARVEST INFO 💌 -->
 
-        <button class="icons" onclick="harvest()"><p> Harvest<p> </button>
+        <button class="icons" onclick="showhide('harvestinfo')"><p> Harvest<p> </button>
 
         <div id="harvestinfo" class="infoblock" style="display:none">
           <img src="images/harvest.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
           <h2> Harvest </h2>
 
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
+          <p class="textblock">
+            October, November: <br>
+            harvest ripe quince. A quince will look akin to a pear but feel more like an apple. </p>        </div>
 
 <!-- End of harvest info  -->
 <br>
 <!-- USES INFO 💌 -->
 
-      <button class="icons" onclick="uses()"><p> Uses<p> </button>
+      <button class="icons" onclick="showhide('usesinfo')"><p> Uses<p> </button>
 
         <div id="usesinfo"  class="infoblock" style="display:none">
           <img src="images/uses.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
           <h2> Uses </h2>
 
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
+          <p class="textblock"> Quince fruit used in cooking and jellies--not eaten raw. </p>        </div>
 <!-- End of uses info -->
 <br>
 <!-- IDENTIFICATION DESCRIPTION 💌 -->
 
-        <button class="icons" onclick="idinfo()"><p> ID<p> </button>
+        <button class="icons" onclick="showhide('idinfo')"><p> ID<p> </button>
 
         <div id="idinfo" class="infoblock" style="display:none">
           <img src="images/id.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
           <h2> Plant Identification </h2>
 
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
+          <p class="textblock"> <a href="https://gobotany.nativeplanttrust.org/species/cydonia/oblonga/" style="text-decoration:underline;"> Hyperlink to information on identifying quince.</a> </p>        </div>
 <!-- End of Plant identification -->
 <br>
 <!-- ORGINS 💌 -->
 
-        <button class="icons" onclick="orgins()"><p> Orgins<p> </button>
+        <button class="icons" onclick="showhide('orginsinfo')"><p> Orgins<p> </button>
         <div id="orginsinfo" class="infoblock" style="display:none">
           <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
           <h2> Orgins </h2>
 
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
+          <p class="textblock"> Dry, arid places from South Eastern Europe to Western Asia. </p>        </div>
 <!-- End of orgins -->
 <br>
 <!-- STORIES 💌 -->
 
-        <button class="icons" onclick="stories()"><p> Stories<p> </button>
+        <button class="icons" onclick="showhide('storiesinfo')"><p> Stories<p> </button>
 
         <div id="storiesinfo" class="infoblock" style="display:none">
           <img src="images/stories.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
           <h2> Stories </h2>
 
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
+          <p class="textblock"> Share your stories about quince with earthandmapping(at)gmail.com </p>        </div>
       </div>
 <!-- End of stories -->
 
@@ -112,7 +124,7 @@
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> Quince </h1>
+          <h1> Quince (Cydonia oblonga)</h1>
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
